# knowzero

./: CLAUDE.md  README.md
backend/: .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1048bbb829b4_add_agent_status_tracking_to_sessions.py  20250216_add_roadmap_relations_to_documents.py  5958bbf9a0f5_add_extra_data_to_messages.py  7640d4dd0c42_add_roadmap_model.py  add_session_name_unique.py  af42447a0350_initial_migration.py  unify_role_message_type.py
backend/app/: __init__.py  main.py
backend/app/agent/: __init__.py  classifier.py  graph.py  llm.py  llm_utils.py  state.py
backend/app/agent/nodes/: __init__.py  chitchat.py  content.py  input_normalizer.py  intent.py  navigator.py  planner.py  route.py  topic.py  topic_planner.py
backend/app/api/: deps.py
backend/app/api/routes/: __init__.py  documents.py  entities.py  roadmaps.py  sessions.py  websocket.py
backend/app/core/: auth.py  config.py  database.py  logging.py
backend/app/models/: __init__.py  document.py  entity.py  roadmap.py  session.py  user.py
backend/app/schemas/: __init__.py  document.py  entity.py  roadmap.py  session.py
backend/app/services/: __init__.py  agent_streaming_service.py  document_service.py  entity_service.py  message_service.py  persistence_coordinator.py  roadmap_service.py  session_service.py  websocket_event_handler.py  websocket_message_sender.py
backend/tests/: conftest.py  test_document_service.py  test_health.py  test_llm_utils.py
docs/: agent-architecture.md  background-generation-design.md  graph-task.md  (+25 more)
(+75 files in other folders)
